// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extract-component default-alias-import.js 1`] = `
Object {
  "component": Object {
    "from": "../components/button-default-class-export",
    "importedName": "namespace",
    "imports": Object {
      "react": Array [
        Object {
          "importedName": "default",
          "name": "React",
        },
      ],
    },
    "name": "Button",
    "request": "/Users/atanasster/component-controls/core/instrument/test/fixtures/components/button-default-class-export.js",
  },
  "componentPackage": Object {
    "dependencies": Object {
      "@babel/generator": "^7.9.4",
      "@babel/parser": "^7.9.4",
      "@babel/traverse": "^7.9.0",
      "@component-controls/core": "^1.2.0",
      "@component-controls/specification": "^1.2.0",
      "@hutson/parse-repository-url": "^5.0.0",
      "@mdx-js/loader": "^1.5.5",
      "camelcase": "^6.0.0",
      "deepmerge": "^4.2.2",
      "find-cache-dir": "^3.3.1",
      "hosted-git-info": "^3.0.4",
      "prettier": "^1.19.1",
      "read-package-json": "^2.1.1",
      "resolve": "^1.15.1",
      "typescript": "^3.8.3",
    },
    "devDependencies": Object {
      "@babel/types": "^7.9.0",
      "@rollup/plugin-node-resolve": "^7.1.1",
      "@types/find-cache-dir": "^3.2.0",
      "@types/hosted-git-info": "^3.0.0",
      "@types/jest": "^25.1.2",
      "cross-env": "^5.2.1",
      "eslint": "^6.5.1",
      "jest": "^24.9.0",
    },
    "fileHash": "c4da3ef5ae7dc15865c9b8aa98f719dc",
    "name": "@component-controls/instrument",
    "peerDependencies": undefined,
    "repository": Object {
      "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/components/button-default-class-export.js",
      "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
      "issues": "https://github.com/ccontrols/component-controls/issues",
    },
    "version": "1.2.0",
  },
}
`;

exports[`extract-component default-import.js 1`] = `
Object {
  "component": Object {
    "from": "../components/button-default-arrow-func",
    "importedName": "default",
    "imports": Object {
      "react": Array [
        Object {
          "importedName": "default",
          "name": "React",
        },
      ],
    },
    "name": "Button",
    "request": "/Users/atanasster/component-controls/core/instrument/test/fixtures/components/button-default-arrow-func.js",
  },
  "componentPackage": Object {
    "dependencies": Object {
      "@babel/generator": "^7.9.4",
      "@babel/parser": "^7.9.4",
      "@babel/traverse": "^7.9.0",
      "@component-controls/core": "^1.2.0",
      "@component-controls/specification": "^1.2.0",
      "@hutson/parse-repository-url": "^5.0.0",
      "@mdx-js/loader": "^1.5.5",
      "camelcase": "^6.0.0",
      "deepmerge": "^4.2.2",
      "find-cache-dir": "^3.3.1",
      "hosted-git-info": "^3.0.4",
      "prettier": "^1.19.1",
      "read-package-json": "^2.1.1",
      "resolve": "^1.15.1",
      "typescript": "^3.8.3",
    },
    "devDependencies": Object {
      "@babel/types": "^7.9.0",
      "@rollup/plugin-node-resolve": "^7.1.1",
      "@types/find-cache-dir": "^3.2.0",
      "@types/hosted-git-info": "^3.0.0",
      "@types/jest": "^25.1.2",
      "cross-env": "^5.2.1",
      "eslint": "^6.5.1",
      "jest": "^24.9.0",
    },
    "fileHash": "305b7edffa5cab1bfaf0c86ebde067bd",
    "name": "@component-controls/instrument",
    "peerDependencies": undefined,
    "repository": Object {
      "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/components/button-default-arrow-func.js",
      "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
      "issues": "https://github.com/ccontrols/component-controls/issues",
    },
    "version": "1.2.0",
  },
}
`;

exports[`extract-component kind-component.js 1`] = `
Object {
  "component": Object {
    "name": "Button",
  },
  "componentPackage": undefined,
}
`;

exports[`extract-component named-alias-import.js 1`] = `
Object {
  "component": Object {
    "from": "../components/button-named-arrow-func",
    "importedName": "Btn",
    "imports": undefined,
    "name": "Button",
    "request": undefined,
  },
  "componentPackage": undefined,
}
`;

exports[`extract-component named-import.js 1`] = `
Object {
  "component": Object {
    "from": "../components/button-named-class",
    "importedName": "Button",
    "imports": Object {
      "react": Array [
        Object {
          "importedName": "default",
          "name": "React",
        },
      ],
    },
    "name": "Button",
    "request": "/Users/atanasster/component-controls/core/instrument/test/fixtures/components/button-named-class.js",
  },
  "componentPackage": Object {
    "dependencies": Object {
      "@babel/generator": "^7.9.4",
      "@babel/parser": "^7.9.4",
      "@babel/traverse": "^7.9.0",
      "@component-controls/core": "^1.2.0",
      "@component-controls/specification": "^1.2.0",
      "@hutson/parse-repository-url": "^5.0.0",
      "@mdx-js/loader": "^1.5.5",
      "camelcase": "^6.0.0",
      "deepmerge": "^4.2.2",
      "find-cache-dir": "^3.3.1",
      "hosted-git-info": "^3.0.4",
      "prettier": "^1.19.1",
      "read-package-json": "^2.1.1",
      "resolve": "^1.15.1",
      "typescript": "^3.8.3",
    },
    "devDependencies": Object {
      "@babel/types": "^7.9.0",
      "@rollup/plugin-node-resolve": "^7.1.1",
      "@types/find-cache-dir": "^3.2.0",
      "@types/hosted-git-info": "^3.0.0",
      "@types/jest": "^25.1.2",
      "cross-env": "^5.2.1",
      "eslint": "^6.5.1",
      "jest": "^24.9.0",
    },
    "fileHash": "194f0fbb1af9ffd1038661a448b7ee1f",
    "name": "@component-controls/instrument",
    "peerDependencies": undefined,
    "repository": Object {
      "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/components/button-named-class.js",
      "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
      "issues": "https://github.com/ccontrols/component-controls/issues",
    },
    "version": "1.2.0",
  },
}
`;

exports[`extract-component node-modules.js 1`] = `
Object {
  "component": Object {
    "from": "theme-ui",
    "importedName": "Button",
    "imports": Object {
      "react": Array [
        Object {
          "importedName": "default",
          "name": "React",
        },
      ],
    },
    "name": "Button",
    "request": "/Users/atanasster/component-controls/node_modules/@theme-ui/components/src/Button.js",
  },
  "componentPackage": Object {
    "dependencies": Object {
      "@theme-ui/color-modes": "^0.3.1",
      "@theme-ui/components": "^0.3.1",
      "@theme-ui/core": "^0.3.1",
      "@theme-ui/css": "^0.3.1",
      "@theme-ui/mdx": "^0.3.0",
      "@theme-ui/theme-provider": "^0.3.1",
    },
    "devDependencies": undefined,
    "fileHash": "55edc55c779e57609b549bd94f835be5",
    "name": "theme-ui",
    "peerDependencies": undefined,
    "repository": Object {
      "browse": "https://github.com/system-ui/theme-ui/tree/master/dist/index.js",
      "docs": "https://github.com/system-ui/theme-ui/tree/master#readme",
      "issues": "https://github.com/system-ui/theme-ui/issues",
    },
    "version": "0.3.1",
  },
}
`;

exports[`extract-component node-modules-source.js 1`] = `
Object {
  "component": Object {
    "from": "@component-controls/components",
    "importedName": "Subtitle",
    "imports": Object {},
    "name": "Button",
    "request": "/Users/atanasster/component-controls/node_modules/@component-controls/components/dist/index.js",
  },
  "componentPackage": Object {
    "dependencies": Object {
      "@primer/octicons-react": "^9.5.0",
      "@theme-ui/presets": "^0.3.0",
      "copy-to-clipboard": "^3.2.1",
      "fast-memoize": "^2.5.2",
      "markdown-to-jsx": "^6.11.0",
      "prism-react-renderer": "^1.0.2",
      "react": "^16.8.3",
      "react-animate-height": "^2.0.20",
      "react-dom": "^16.8.3",
      "react-popper-tooltip": "^2.10.1",
      "react-switch": "^5.0.1",
      "react-table": "^7.0.0",
      "react-tabs": "^3.1.0",
      "theme-ui": "^0.3.1",
    },
    "devDependencies": Object {
      "@types/jest": "^25.1.2",
      "@types/markdown-to-jsx": "^6.11.0",
      "@types/react-table": "^7.0.10",
      "@types/react-tabs": "^2.3.1",
      "@types/theme-ui": "^0.3.0",
      "cross-env": "^5.2.1",
      "eslint": "^6.5.1",
      "jest": "^24.9.0",
    },
    "fileHash": "8b5cf5032e762d2f38ffd0462e3feea5",
    "name": "@component-controls/components",
    "peerDependencies": Object {
      "react": "*",
      "react-dom": "*",
      "theme-ui": "*",
    },
    "repository": Object {
      "browse": "https://github.com/ccontrols/component-controls/tree/master/ui/components/dist/index.js",
      "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
      "issues": "https://github.com/ccontrols/component-controls/issues",
    },
    "version": "1.2.0",
  },
}
`;

exports[`extract-component non-existing-file.js 1`] = `
Object {
  "component": Object {
    "from": "./Button",
    "importedName": "Btn",
    "imports": undefined,
    "name": "Button",
    "request": undefined,
  },
  "componentPackage": undefined,
}
`;

exports[`extract-component parameters-component.js 1`] = `
Object {
  "component": Object {
    "from": "../components/button-named-arrow-func",
    "importedName": "Button",
    "imports": Object {
      "react": Array [
        Object {
          "importedName": "default",
          "name": "React",
        },
      ],
    },
    "name": "Button",
    "request": "/Users/atanasster/component-controls/core/instrument/test/fixtures/components/button-named-arrow-func.js",
  },
  "componentPackage": Object {
    "dependencies": Object {
      "@babel/generator": "^7.9.4",
      "@babel/parser": "^7.9.4",
      "@babel/traverse": "^7.9.0",
      "@component-controls/core": "^1.2.0",
      "@component-controls/specification": "^1.2.0",
      "@hutson/parse-repository-url": "^5.0.0",
      "@mdx-js/loader": "^1.5.5",
      "camelcase": "^6.0.0",
      "deepmerge": "^4.2.2",
      "find-cache-dir": "^3.3.1",
      "hosted-git-info": "^3.0.4",
      "prettier": "^1.19.1",
      "read-package-json": "^2.1.1",
      "resolve": "^1.15.1",
      "typescript": "^3.8.3",
    },
    "devDependencies": Object {
      "@babel/types": "^7.9.0",
      "@rollup/plugin-node-resolve": "^7.1.1",
      "@types/find-cache-dir": "^3.2.0",
      "@types/hosted-git-info": "^3.0.0",
      "@types/jest": "^25.1.2",
      "cross-env": "^5.2.1",
      "eslint": "^6.5.1",
      "jest": "^24.9.0",
    },
    "fileHash": "d817f3a58ea487eda1317bcff4199751",
    "name": "@component-controls/instrument",
    "peerDependencies": undefined,
    "repository": Object {
      "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/components/button-named-arrow-func.js",
      "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
      "issues": "https://github.com/ccontrols/component-controls/issues",
    },
    "version": "1.2.0",
  },
}
`;

exports[`extract-component story-component.js 1`] = `
Object {
  "component": Object {
    "from": "../components/button-named-class",
    "importedName": "Button",
    "imports": Object {
      "react": Array [
        Object {
          "importedName": "default",
          "name": "React",
        },
      ],
    },
    "name": "Button",
    "request": "/Users/atanasster/component-controls/core/instrument/test/fixtures/components/button-named-class.js",
  },
  "componentPackage": Object {
    "dependencies": Object {
      "@babel/generator": "^7.9.4",
      "@babel/parser": "^7.9.4",
      "@babel/traverse": "^7.9.0",
      "@component-controls/core": "^1.2.0",
      "@component-controls/specification": "^1.2.0",
      "@hutson/parse-repository-url": "^5.0.0",
      "@mdx-js/loader": "^1.5.5",
      "camelcase": "^6.0.0",
      "deepmerge": "^4.2.2",
      "find-cache-dir": "^3.3.1",
      "hosted-git-info": "^3.0.4",
      "prettier": "^1.19.1",
      "read-package-json": "^2.1.1",
      "resolve": "^1.15.1",
      "typescript": "^3.8.3",
    },
    "devDependencies": Object {
      "@babel/types": "^7.9.0",
      "@rollup/plugin-node-resolve": "^7.1.1",
      "@types/find-cache-dir": "^3.2.0",
      "@types/hosted-git-info": "^3.0.0",
      "@types/jest": "^25.1.2",
      "cross-env": "^5.2.1",
      "eslint": "^6.5.1",
      "jest": "^24.9.0",
    },
    "fileHash": "194f0fbb1af9ffd1038661a448b7ee1f",
    "name": "@component-controls/instrument",
    "peerDependencies": undefined,
    "repository": Object {
      "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/components/button-named-class.js",
      "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
      "issues": "https://github.com/ccontrols/component-controls/issues",
    },
    "version": "1.2.0",
  },
}
`;
